<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_me"
            android:icon="@drawable/nav_me"
            android:title="@string/nav_me" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/nav_message"
            android:title="@string/nav_message" />
        <item
            android:id="@+id/nav_rules"
            android:icon="@drawable/nav_rules"
            android:title="@string/nav_rules" />
        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/nav_service"
            android:title="@string/nav_service" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/nav_share"
            android:title="@string/nav_share" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/nav_logout"
            android:title="@string/nav_logout"/>
    </group>
</menu>