<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_of_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/bei_shu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            tools:text="1倍" />

        <TextView
            android:id="@+id/zhu_shu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            tools:text="共0注" />

        <TextView
            android:id="@+id/jin_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            tools:text="共0.000元" />

        <TextView
            android:id="@+id/max_prize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="奖金最高240元" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/without_add_num"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_action_delete"
                android:tint="@color/colorPrimary" />

            <Button
                android:id="@+id/add_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="3"
                android:background="#546E7A"
                android:text="@string/btn_shaixuan"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/confirm_group"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/zhui_hao"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#78909C"
                android:text="@string/btn_zhuihao"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="3"
                android:background="@color/btn_touzhu"
                android:text="@string/btn_touzhu"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/num_cart"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_action_list" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
